; ModuleID = '/home/carl/AnghaBench/freebsd/sys/cddl/contrib/opensolaris/uts/common/fs/zfs/extr_dmu.c_dmu_assign_arcbuf.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/cddl/contrib/opensolaris/uts/common/fs/zfs/extr_dmu.c_dmu_assign_arcbuf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dmu_assign_arcbuf(i32* %0, i32 %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %10 = load i32*, i32** %5, align 8
  store i32* %10, i32** %9, align 8
  %11 = load i32*, i32** %9, align 8
  %12 = call i32 @DB_DNODE_ENTER(i32* %11)
  %13 = load i32*, i32** %9, align 8
  %14 = call i32 @DB_DNODE(i32* %13)
  %15 = load i32, i32* %6, align 4
  %16 = load i32*, i32** %7, align 8
  %17 = load i32*, i32** %8, align 8
  %18 = call i32 @dmu_assign_arcbuf_dnode(i32 %14, i32 %15, i32* %16, i32* %17)
  %19 = load i32*, i32** %9, align 8
  %20 = call i32 @DB_DNODE_EXIT(i32* %19)
  ret void
}

declare dso_local i32 @DB_DNODE_ENTER(i32*) #1

declare dso_local i32 @dmu_assign_arcbuf_dnode(i32, i32, i32*, i32*) #1

declare dso_local i32 @DB_DNODE(i32*) #1

declare dso_local i32 @DB_DNODE_EXIT(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
